Fix skills alignment for tablet and mobile

--- a/src/app/resume/skills/skills.component.scss
+++ b/src/app/resume/skills/skills.component.scss
@@ -11,7 +11,7 @@
 }
 
 .tag {
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .skills__main_item {
@@ -32,8 +32,26 @@
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1200px) {
   .columns {
     flex-direction: column;
+  }
+
+  .skills__main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .columns {
+    flex-direction: row;
+  }
+
+  .skills__main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
